test/TestPhases/typechecker/invalid/addingNonNum.blc
module

function bla()
    var a: bool = true + true
end
